fixed fork me on github ribbon, so doesn't overlap menu

--- a/_sass/_headers.scss
+++ b/_sass/_headers.scss
@@ -271,7 +271,7 @@ header.main {
     z-index: 99;
 
     display: none;
-    @media screen and (min-width: 1000px) {
+    @media screen and (min-width: 1200px) {
       display: block;
     }
 
